minimize picture sizes.

--- a/hps-svt-ieee2015-proceedings.tex
+++ b/hps-svt-ieee2015-proceedings.tex
@@ -142,7 +142,7 @@ of a thin ($\sim 0.125\%~X_{0} $) target to reconstruct the mass and decay verte
 rendered overview of HPS is shown in Fig.~\ref{fig:hps-layout}.
 \begin{figure}[]
 \centering
-\includegraphics[width=3.5in]{hps-layout-cropped}
+\includegraphics[width=3.5in]{figures/hps-layout-cropped}
 \caption{A rendered overview of the HPS detector.}
 \label{fig:hps-layout}
 \end{figure}
@@ -189,7 +189,7 @@ or have an unacceptable material budget.
 The SVT overall layout is rendered in Fig.~\ref{fig:layout} and summarized in Tab.~\ref{tab:layout}. 
 \begin{figure}[]
 \centering
-\includegraphics[width=3.5in]{svt-layout.png}
+\includegraphics[width=3.5in]{figures/svt-layout.png}
 \caption{A rendered overview of the SVT installed on the beamline.}
 \label{fig:layout}
 \end{figure}
@@ -216,7 +216,7 @@ with the 15~mrad dead zone above and below the beam axis, puts the active silico
 in the most active region reach 4~MHz/mm$^2$ and about 1\% occupancy for the strips closest to the beam, see Fig.~\ref{fig:occupancy}.
 \begin{figure}[]
 \centering
-\includegraphics[width=3in]{occupancy.png}
+\includegraphics[width=3in]{figures/occupancy.png}
 \caption{Background occupancy for layer 1 during nominal operation conditions.}
 \label{fig:occupancy}
 \end{figure}
@@ -239,7 +239,7 @@ from the electromagnetic calorimeter, six analog samples of the pulse shape, see
 41~MSPS. This pulse shape can be analyzed and fitted to extract the t$_0$ of the hit~\cite{Friedl:2009zz}.
 \begin{figure}[]
 \centering
-\includegraphics[width=3.0in]{pulseshape.png}
+\includegraphics[width=3.0in]{figures/pulseshape.png}
 \caption{Pulse shape of the APV25 ASIC.}
 \label{fig:pulseshape}
 \end{figure}
@@ -279,13 +279,13 @@ Figures~\ref{fig:half-modules-L1-3} and~\ref{fig:half-modules-L4-6} show a compl
 respectively.
 \begin{figure}[]
 \centering
-\includegraphics[width=3.0in]{halfmodule-L1-3.png}
+\includegraphics[width=3.0in]{figures/halfmodule-L1-3.jpg}
 \caption{A half-module for layer 1-3 mounted on the module support.}
 \label{fig:half-modules-L1-3}
 \end{figure}
 \begin{figure}[]
 \centering
-\includegraphics[width=3.0in]{halfmodule-L4-6-assembly.png}
+\includegraphics[width=3.0in]{figures/halfmodule-L4-6-assembly.jpg}
 \caption{A layer 4-6 half-module under assembly.}
 \label{fig:half-modules-L4-6}
 \end{figure}
@@ -299,7 +299,7 @@ and absorbs thermal expansion mismatch. The same principle is used for layer 4-6
 spring pivot.
 \begin{figure}[]
 \centering
-\includegraphics[width=3.0in]{uchannel-L4-6.png}
+\includegraphics[width=3.0in]{figures/uchannel-L4-6.jpg}
 \caption{A u-channel for layer 4-6 holding three detector modules.}
 \label{fig:uchannels-L4-6}
 \end{figure}
@@ -309,7 +309,7 @@ Three modules are screwed directly on an aluminum "u-channel", see Fig.~\ref{fig
 actively cooled by HFE~7000 coolant circulating in a 1/4" copper tube pressed into a machined groove. 
 \begin{figure}[!t]
 \centering
-\includegraphics[width=3.0in]{2014-1111-1596-heavy_photon_search-2.jpg}
+\includegraphics[width=3.0in]{figures/2014-1111-1596-heavy_photon_search-2.jpg}
 \caption{All four u-channels (layers 1-3 closest) with detector modules mounted. The flexible cooling hoses and support rods for layer 1-3 
 can be seen extending towards the camera view. }
 \label{fig:uchannels}
@@ -319,7 +319,7 @@ shown in Fig.~\ref{fig:svt-box}, sits inside the JLab Hall~B analyzing magnet va
 rigidity needed for precision mounting of the u-channels, a rectangular  "support ring" is located at the inner mounting point for the u-channels. 
 \begin{figure}[]
 \centering
-\includegraphics[width=3.0in]{svt-box.jpg}
+\includegraphics[width=3.0in]{figures/svt-box.jpg}
 \caption{The SVT support box with the upstream vacuum box for services.}
 \label{fig:svt-box}
 \end{figure}
@@ -334,7 +334,7 @@ magnet as seen in Fig.~\ref{fig:vacuum-box}. In addition to the linear shift fla
 upstream interface to the beamline. 
 \begin{figure}[]
 \centering
-\includegraphics[width=3.0in]{vacuum-box.png}
+\includegraphics[width=3.0in]{figures/vacuum-box.jpg}
 \caption{View from upstream, electron side, of the SVT after installation on the beamline. The vacuum box, that interfaces the beamline with the 
 vacuum chamber, can be seen with its three linear shifts, two on the top and one on the bottom side. The flange holding the power and 
 high-voltage sensor bias vacuum penetration boards extends to the right from the support box.}
@@ -344,7 +344,7 @@ high-voltage sensor bias vacuum penetration boards extends to the right from the
 An aluminum plate with data acquisition boards, see Fig.~\ref{fig:febs}, slides into the chamber in a machined groove in the support box. 
 \begin{figure}[]
 \centering
-\includegraphics[width=3.0in]{febs.png}
+\includegraphics[width=3.0in]{figures/febs.jpg}
 \caption{The partially cabled data acquisition front end boards  screwed to the aluminum support plate before installation .}
 \label{fig:febs}
 \end{figure}
@@ -365,7 +365,7 @@ upstream positron side, rendering a less intense radiation environment. Borated 
 further lower the risk of damage from radiation emitted by the nearby target.
 \begin{figure}[]
 \centering
-\includegraphics[width=3.0in]{cob.png}
+\includegraphics[width=3.0in]{figures/cob.png}
 \caption{One COB ATCA blade used in the RCE platform.}
 \label{fig:cob}
 \end{figure}
@@ -377,7 +377,7 @@ and high voltage sensor bias into the chamber; this can be seen in Fig.~\ref{fig
 An overview of the data flow across the RCE platform is shown in Fig.~\ref{fig:rce}.
 \begin{figure}[]
 \centering
-\includegraphics[width=3.5in]{rce.png}
+\includegraphics[width=3.5in]{figures/rce.png}
 \caption{Schematic overview of the SVT DAQ.}
 \label{fig:rce}
 \end{figure}
@@ -409,7 +409,7 @@ expected at this early stage, where improvements in calibration and alignment ar
 difference between the hit and track time (average of the hit times on the track) seen in Fig.~\ref{fig:hit-time}. 
 \begin{figure}[]
 \centering
-\includegraphics[width=3.0in]{hittime2.png}
+\includegraphics[width=3.0in]{figures/hittime2.png}
 \caption{Difference between the track time and hit time.}
 \label{fig:hit-time}
 \end{figure}
@@ -418,7 +418,7 @@ The mass resolution is calibrated using e.g. M\"oller events, see Fig.~\ref{fig:
 from simulated events. 
 \begin{figure}[]
 \centering
-\includegraphics[width=3.0in]{moller2.png}
+\includegraphics[width=3.0in]{figures/moller2.png}
 \caption{Invariant mass of selected e$^-$e$^-$ pairs compatible with Mo\"ller kinematics in a fraction of the data collected.}
 \label{fig:moller}
 \end{figure}
@@ -426,7 +426,7 @@ The vertex distribution of e$^+$e$^-$ pairs after radiative QED trident selectio
 at this stage. Understanding the tails of these distributions is fundamental to the displaced vertex search. 
 \begin{figure}[]
 \centering
-\includegraphics[width=3.0in]{overlay-slice-36-pelle.png}
+\includegraphics[width=3.0in]{figures/overlay-slice-36-pelle.png}
 \caption{Fitted vertex distribution of e$^+$e$^-$ pairs using a QED radiative trident selection for data and simulated events.}
 \label{fig:vertex}
 \end{figure}
@@ -463,7 +463,7 @@ The SVT has been kept cold since the run to mitigate reverse annealing in the ir
 %
 %\begin{figure}[!t]
 %\centering
-%\includegraphics[width=3.5in]{fulldetector.pdf}
+%\includegraphics[width=3.5in]{figures/fulldetector.pdf}
 % where an .eps filename suffix will be assumed under latex, 
 % and a .pdf suffix will be assumed for pdflatex; or what has been declared
 % via \DeclareGraphicsExtensions.
@@ -484,10 +484,10 @@ The SVT has been kept cold since the run to mitigate reverse annealing in the ir
 % used instead of \subfloat.
 %
 %\begin{figure*}[!t]
-%\centerline{\subfloat[Case I]\includegraphics[width=2.5in]{subfigcase1}%
+%\centerline{\subfloat[Case I]\includegraphics[width=2.5in]{figures/subfigcase1}%
 %\label{fig_first_case}}
 %\hfil
-%\subfloat[Case II]{\includegraphics[width=2.5in]{subfigcase2}%
+%\subfloat[Case II]{\includegraphics[width=2.5in]{figures/subfigcase2}%
 %\label{fig_second_case}}}
 %\caption{Simulation results}
 %\label{fig_sim}
